add html templates

--- a/WebService/furniture_world/main/static/main/css/style.css
+++ b/WebService/furniture_world/main/static/main/css/style.css
@@ -105,7 +105,7 @@ ul {
 
 .menu {
 	margin: 40px 0;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 16px;
 }
 
@@ -141,7 +141,7 @@ ul {
 }
 
 .menu__ul__sub {
-/*	display: none;*/
+	display: none;
 }
 
 /*
