--- a/WebService/furniture_world/main/templates/structur.html
+++ b/WebService/furniture_world/main/templates/structur.html
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>	
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Source+Sans+Pro:wght@200;300;400;600&family=Titillium+Web&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="{% static 'style.css' %}">
+	<link rel="stylesheet" href="{% static 'main/css/style.css' %}">
 	<title>{{ title }}</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
 	<div class="container">
 		<div class="header__inner">
 				<div class="header__logo">
-					<img class="logo" src="./img/Logo.svg" alt="">
+					<img class="logo" src="{% static 'main/img/Logo.svg' %}" alt="">
 				</div>
 				<nav class="nav">
 					<a class="nav__link" href="#">Features</a>
@@ -34,7 +34,7 @@
 
 <!-- Connecting the JavaScript -->
 
-<script src="{% static 'script.js' %}" type="text/javascript"></script>
+<script src="{% static 'main/js/script.js' %}" type="text/javascript"></script>
 
 </body>
 </html>
