--- a/WebService/furniture_world/main/static/main/css/style.css
+++ b/WebService/furniture_world/main/static/main/css/style.css
@@ -105,7 +105,7 @@ ul {
 
 .menu {
 	margin: 40px 0;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 16px;
 }
 
@@ -141,7 +141,7 @@ ul {
 }
 
 .menu__ul__sub {
-	display: none;
+/*	display: none;*/
 }
 
 /*
@@ -168,20 +168,86 @@ h1.fromRight:after{ transform-origin:100% 50%; }
 
 .product__img__inner {
 	display: flex;
-  	align-items: center;
+	align-items: center;
 	height: 100vh;
 	width: 65%;
 	vertical-align: top;
+
+	position: relative;
+	overflow: hidden;
 /*	border-right: 2px solid #000; */
 }
 
 .product__img__item {
-
 	max-width: 100%;
+	position: absolute;
+	left: 0;
+	opacity: 0;
+	transition: opacity .5s ease-in-out;
+}
+
+.product__img__item:first-child {
+  opacity: 1;
+}
+
+.product__img__arrow {
+	cursor: pointer;
+	position: absolute;
+	width: auto;
+	margin-top: -22px;
+	padding: 150px 20px;
+	color: black;
+	font-weight: bold;
+	font-size: 22px;
+	text-decoration: none;
+	border-radius: 0 3px 3px 0;
+	opacity: 0;
+	z-index: 1000;
+	vertical-align: top;
+
+	transition: all .4s ease-in;
+}
+
+.product__img__arrow_ {
+	right: 0;
+	border-radius: 3px 0 0 3px;
+}
+
+.product__img__arrow:hover {
+	opacity: 1;
+}
+
+.product__img__dot__inner {
+	position: absolute;
+	padding: 20px;
+	bottom: 0;
+	left: 50%;
+	z-index: 1000;
+}
+
+.product__img__dot__item {
+	display: inline-block;
+	cursor: pointer;
+	height: 6px;
+	width: 6px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+
+	transition: background-color .6s ease, height .2s, width .2s;
+}
+
+.product__img__dot__item__active, .product__img__dot__item:hover {
+	background-color: #717171;
+}
+
+.product__img__dot__inner:hover .product__img__dot__item {
+	height: 10px;
+	width: 10px;
 }
 
 .product__details {
-	margin-top: 115px;
+	margin-top: 125px;
 	max-height: 100vh;
 	width: 35%;
 	padding: 0 35px;
