--- a/Frontend/src/components/header/header.module.scss
+++ b/Frontend/src/components/header/header.module.scss
@@ -1,5 +1,84 @@
+$margin_step: 5px;
+$color_base: #232323;
+$color_base_hover: rgba($color_base, 0.6);
+
 
 .header {
     width: 100%;
     height: 70px;
+    &__inner {
+        display: flex;
+        align-items: center;
+    }
+
+    &__icon {
+        width: 4rem;
+        height: 4rem;
+        color: $color_base;
+    }
+
+    &__nav {
+        margin-left: $margin_step*4;
+        
+        &__link {
+            margin-left: $margin_step*8;
+            padding-bottom: 4px;
+            position:relative;
+            
+
+            color: $color_base;
+            text-decoration: none;
+
+            transition: all .2s linear;
+
+            &:first-child {
+                margin-left: 0;
+            }
+
+            &:hover {
+                color: $color_base_hover;
+                
+                &::before {
+                    width: 100%;
+                }
+            }
+
+            &::before {
+                content: "";
+                bottom: 0;
+                left: 0;
+                position: absolute;
+                width: 0%;
+                height: 1.5px;
+                background-color: $color_base_hover;
+            
+                transition: all .2s linear;
+            }
+
+            
+        }
+    }
+}
+
+/* Media */
+
+@media only screen and (max-width: 1000px) {
+	
+}
+
+@media only screen and (max-width: 768px) {
+    .header {
+        
+        &__nav {
+            display: none;
+        }
+    }
+}
+
+@media only screen and (max-width: 450px) {
+
+}
+
+@media only screen and (max-width: 320px) {
+	
 }
